tests/NormalTests/paczka1/fuzzy1/85914503.err
Error in line 3: RAogFkE A46 96,3
Error in line 6: A46 S945 72,4
Error in line 7: RAogFkE A508 25,8
Error in line 10: A46 S945 59,1
Error in line 25: JBe6Flqw1 A46 30,49
Error in line 29: O5wg A877 85,8
Error in line 32: A46 A46 76,0
